# video-classification-trainer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: splitting.py  video_metadata.py  video_shift_sync.py
raw_code_files/: annotation_file.py  dataset.py  enums.py  main.py  model.py  settings.py  splitting.py  video_metadata.py
scripts/: convert_videos_to_frames.py  crop_video.py  sync_video_with_scores.py  video_maker.py
tests/: test_video_trainer.py  video_trainer_test.py
tests/loading/fst_kinoscope/: enums_test.py  test_enums.py
video_trainer/: enums.py  inference.py  main.py  model.py  models.py  settings.py  system.py  system_autoencoder.py  system_classifier_autoencoder.py  train_autoencoder.py  train_classifier.py  train_classifier_autoencoder.py
video_trainer/classification/: training.py
video_trainer/data/: splitting.py  video_metadata.py
video_trainer/loading/: abstact_loader.py  annotation_file.py  data_module_autoencoder.py  data_module_classification.py  dataloader.py  dataset.py  enums.py  load_video.py  transforms.py
video_trainer/loading/fst_kinoscope/: enums.py  loader.py
