[tool.poetry]
name = "video-trainer"
version = "0.1.0"
description = ""
authors = ["Alexandros Vythoulkas <alvythoulkas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
torchvision = "^0.13.0"
numpy = "^1.23.0"
opencv-python = "^4.6.0.66"
av = "^9.2.0"
Pillow = "^9.2.0"
tqdm = "^4.64.0"
mlflow = "^1.27.0"
pytorch-lightning = "^1.6.4"
torchmetrics = "^0.9.2"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.19.0"
rope = "^1.2.0"
mypy = "^0.961"
pylint = "^2.14.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
pyupgrade = "^2.34.0"
black = "^22.6.0"
poetryup = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=99
profile = "black"

[tool.black]
line-length = 99
skip-string-normalization = 1

[tool.mypy]
strict = true
disallow_subclassing_any = false
