[tool.poetry]
name = "video-trainer"
version = "0.1.0"
description = ""
authors = ["Alexandros Vythoulkas <alvythoulkas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
torchvision = "^0.14.0"
numpy = "^1.23.5"
opencv-python = "^4.6.0.66"
av = "^10.0.0"
Pillow = "^9.3.0"
tqdm = "^4.64.1"
mlflow = "^2.0.1"
pytorch-lightning = "^1.8.3.post1"
torchmetrics = "^0.11.0"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
rope = "^1.5.1"
mypy = "^0.991"
pylint = "^2.15.8"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pyupgrade = "^3.3.1"
black = "^22.10.0"
poetryup = "^0.12.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=99
profile = "black"

[tool.black]
line-length = 99
skip-string-normalization = 1

[tool.mypy]
strict = true
disallow_subclassing_any = false
